--- a/latex/main.tex
+++ b/latex/main.tex
@@ -939,32 +939,19 @@ Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
-DISKUSSION AF TUNNEL
-I vores analyse af tunnelopgaverne viste tabel \ref{tab:tunnelopgave} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
+I vores analyse af tunnelopgaverne viste tabel \ref{tab:tunnelopgave} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.\\
 
-DISKUSSION AF SPIRAL
+DISKUSSION AF SPIRAL\\
 
+Analysen af bevægelsesbaner viste, ligesom analysen af tunnelopgaverne, at Meyer's formulering passede bedst på vores indsamlede data. Der er dog ikke meget forskel fra denne og Fitts' og MacKenzie's. Vi mener derfor at små variationer i vores data ville kunne gøre en stor forskel for hvilken af de tre formuleringer som er bedst. Welford's formulering har væsentlig højere AIC-værdier end de tre andre og kan derfor betegnes som den dårligste af de fire. Residualgraferne giver de samme resultater som AIC-analysen. Meyer's passer bedst på vores data, tæt fulgt af Fitts' og MacKenzie's, mens Welford's passer dårligere end de andre.\\
 
-DISKUSSION AF AIC
-
-DISKUSSION AF RESIDUALPLOTS
-
-DISKUSSION AF a OG b
-
-DISKUSSION I FORHOLD TIL TWO LARGE DATASETS
-
-DISKUSSION AF PASSER DET HELE? KAN FiTTS BRUGES?
+I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere, er at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.\\
 
 
-I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere, er at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
+Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne vores resultater med deres. \cite{goldberg2015} fandt frem til at Meyer's var den bedste formel, når sværhedsgraden var lille, mens Fitts' formulering var den bedste, når sværhedsgraden var stor. Deres resultater var inkonsistente derimellem. Når de kiggede på MacKenzie's formulering, så var den klart bedre end både Fitts' og Meyer's. Dette modsiger vores resultater, hvor Meyer's var bedst. Grunden til dette kan være at vi generelt kigger på et område, hvor små variationer i dataen gør en stor forskel for hvilken formulering der passer bedst. Da vi på samme tid har med mennesker at gøre, så er der mange variable som kan have en indflydelse på hvor hurtigt de kan gøre det.\\
 
-For vores tunnel- og spiralopgaver har vi baseret vores forsøg på tidligere udførte forsøg af \cite{accot1997}. Det er her vigtigt at nævne at \cite{accot1997} havde 16 tunnelopgaver og 16 spiralopgaver, mens vi kun havde fire tunnelopgaver og fire spiralopgaver. Dette har ført til at vi har fået langt mindre data og vil også gøre at vores affine modeller ikke nødvendigvis vil passe lige så godt som \cite{accot1997} gjorde. Dette afspejles også af at formlerne givet i \cite{accot1997} i vores forsøg ikke gør den store forskel, når vi sammenligner dem med AIC. Derudover havde vi flere testpersoner som gik imod forventning og blev hurtigere jo større $ID$. Dette viser også at Fitts' Lov, selv i Accot \& Zhai's modificeret version, ikke nødvendigvis kan bruges på navigationsopgaver.
+Generelt skal vi huske, at Fitts' lov beskriver komplekse menneskelige motoriske evner. Der vil derfor altid være forskel i indsamlede data, da forskellige personer har forskellige motoriske evner. Både indre og ydre faktorer kan have en effekt på hvor hurtigt en person kan udføre en given opgave. Der har siden Fitts' originale artikel blev udgivet i 1954 været lavet mange forsøg, for at bevise eller forbedre Fitts' lov. Denne er dog langt fra perfekt og skal derfor måske mere ses som en rettesnor, snarere end en egentlig lov.
 
-Vores AIC værdier viste at Meyer's var den bedste af de fire formuleringer, men viste samtidig også at den var meget tæt fulgt af Fitts' og MacKenzie's. Det viser at der ikke skal meget varians i dataen til, før at det vil være en af de to andre som er bedst. Meyer's formulering har til gengæld en væsentlig højere AIC værdi og vi kan derfor sige at den passer dårligere til dataen end nogle af de andre. Vores residualplots viser samme mønster. Meyer's formulering passer bedst til den indsamlede data, men små variationer i dataen ville kunne gøre både Fitts' og MacKenzie's bedre. Igen ses det at Welford's formulering passer væsentlig dårligere til dataen. Dette ses især ved lavere værdier af $ID$, hvilket også passer med at Welford's mangler det additive led og derfor først vil approksimere de andre ved højere værdier.
-
-Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne vores resultater med deres. \cite{goldberg2015} fandt frem til at Meyer's var den bedste formel, når sværhedsgraden var lille, mens Fitts' formulering var den bedste, når sværhedsgraden var stor. Deres resultater var inkonsistente derimellem. Når de kiggede på MacKenzie's formulering, så var den klart bedre end både Fitts' og Meyer's. Dette modsiger vores resultater, hvor Meyer's var bedst. Grunden til dette kan være at vi generelt kigger på et område, hvor små variationer i dataen gør en stor forskel for hvilken formulering der passer bedst. Da vi på samme tid har med mennesker at gøre, så er der mange variable som kan have en indflydelse på hvor hurtigt de kan gøre det. Disse variabler kunne f.eks. være træthed, opmærksomhed, skærmens lysstyrke, fysiske skader ol.
-
-NOGET MED AT DET IKKE PASSER PERFEKT OG ALDRIG VIL! FITTS' LOV ER INCOMPLETE OG ER INDTIL VIDERE DATASPECIFIK!
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
 
