--- a/latex/main.tex
+++ b/latex/main.tex
@@ -3,7 +3,7 @@
 \begin{abstract}
 \begin{itemize}
 	\item Fylder 10-20 linjer
-	\item Indeholder en beskrivelse af opgavens formål/proplemstilling, anvendte metoder, resultater og konklusioner
+	\item Indeholder en beskrivelse af opgavens formål/problemstilling, anvendte metoder, resultater og konklusioner
 	\item Ikke indeholder citater eller kildehenvisninger
 	\item Skrives i ét afsnit
 	\item Laves efter opgaven er skrevet
@@ -843,9 +843,16 @@ Fitts & 20262.07 & 36.4
 \end{minipage}
 
 \newpage
-\addcontentsline{toc}{section}{Modelanalyse af hastighedsprofiler}
+\addcontentsline{toc}{section}{modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
-Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvantitativ og en kvalitativ analyse af de indsamlede hastighedsprofiler fra crowdsourcingdeltagernes pegeopgaver.
+Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ og efterfølgende kvantitativ analyse af de indsamlede bevægelsesbaner fra crowdsourcingdeltagernes pegeopgaver.
+
+\addcontentsline{toc}{subsection}{Kvalitativ analyse}
+\subsection*{Kvalitativ analyse}
+Vi har valgt at udføre en kvalitativ analyse af bevægelsesbanerne og testdeltagernes spørgeskemaer, da det vil give os et større overblik over den indsamlede data og vise os hvilke tendenser der kan observeres.
+Den kvalitative analyse bygger på 57 tilfældige crowdsourcingdeltagerne, hvilket svarer til cirka $21\%$ af deltagerne. Af de 57 deltagere angav 32 at de brugte mus, mens 25 angav at deres pegeredskab var touchpad. Disse tal stemmer overens den procentvise fordeling af pegeenhed for alle testdeltagere, vist i tabel \ref{tab:persons_average}. Vores observationer baserer sig på bevægelsesbanerne for hver deltager, et eksempel herpå ses i figur \ref{fig:movement_random_person}.
+
+Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være én korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning.
 
 \begin{table}[h]
 	\centering
@@ -857,16 +864,9 @@ Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvantitativ og 
 		                &                   & $15-40$ timer: \hfill22\% & $15-40$ timer: \hfill24\% &                     &\\
 		                &                   & $>40$ timer: \hfill3\%    & $>40$ timer: \hfill71\%   &                     &
 	\end{tabular}
-	\caption{TODO: Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
 	\label{tab:persons_average}
 \end{table}
-
-\addcontentsline{toc}{subsection}{Kvalitativ analyse}
-\subsection*{Kvalitativ analyse}
-Vi har valgt at udføre en kvalitativ analyse af bevægelsesbanerne, da det vil give os et større overblik over den indsamlede data og vise os hvilke tendenser der kan observeres.
-Den kvalitative analyse bygger på 57 tilfældigt crowdsourcingdeltagerne, hvilket svarer til cirka $21\%$ af deltagerne. Af de 57 deltagere angav 32 at de brugte mus, mens 25 angav at deres pegeredskab var touchpad. Vores observationer baserer sig på bevægelsesbanerne for hver deltager, et eksempel herpå ses i figur \ref{fig:movement_random_person}.
-
-Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være en korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning.
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.45\linewidth}
@@ -931,7 +931,7 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
-Vores valg af opslagssteder i det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er .......! Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er førhen blevet påvist at folk der spiller computer vil have være hurtigere\cite{wyeld2013}. I vores undersøgelse er dette dog ikke tilfældet, da tabel \ref{SOME TABEL} viser at gennemsnitstiderne for alle grupperinger af videogames tider er meget ens.
+Vores valg af opslagssteder i det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er førhen blevet påvist, at folk der spiller computer vil have være hurtigere\cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
 
 Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskelle på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket vil give dem et dårligere resultat.
 
@@ -939,11 +939,11 @@ Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
-DISKUSSION AF TUNNEL
-I vores analyse af tunnelopgaverne viste tabel \ref{tab:tunnelopgave} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
+% Diskussion af tunnel
+I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
 
-DISKUSSION AF SPIRAL
-
+% Diskussion af spiral
+Analysen af spiralopgaverne viste, at Accot og Zhai's formulering beskrev dataene bedst, jvf. AIC værdierne fra tabel \ref{tab:table_analysis_aic_spiral}. Dette er præcis, hvad vi forventede, da deres er $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er ikke tilfældet for spiralopgaven.
 
 DISKUSSION AF AIC
 
