--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -155,5 +155,9 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{fig:ex_step_7_sending}
 \end{minipage}
 
+%-- R-kode --%
+\newpage
+\chapter{R-kode fra analyse}
+\lstinputlisting{main.r}
 
 \end{appendices}
