--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -158,6 +158,6 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 %-- R-kode --%
 \newpage
 \chapter{R-kode fra analyse}
-\lstinputlisting{main.r}
+\lstinputlisting[language=R]{main.r}
 
 \end{appendices}
