--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,13 +1,7 @@
 \input{preface.tex}
 
 \begin{abstract}
-\begin{itemize}
-	\item Fylder 10-20 linjer
-	\item Indeholder en beskrivelse af opgavens formål/proplemstilling, anvendte metoder, resultater og konklusioner
-	\item Ikke indeholder citater eller kildehenvisninger
-	\item Skrives i ét afsnit
-	\item Laves efter opgaven er skrevet
-\end{itemize}
+Human motion models for pointing tasks are used in the design of many everyday items, from software to smartphones and assembly lines. Fitts' Law defines a relationship between motion duration and the ratio of target distance over target size. This paper present a theoretical description of several formulations of Fitts' Law. We present a dataset from an uncontrolled, online user study. Using Akaike Information Criterion(AIC) and residual-analysis, we compare four variations of Fitts' Law. We also analyse the variants, based on the speed and velocity of a given task. We find that three of the four variations are closely aligned on the collected data, while the last one is significantly worse than the rest.
 \end{abstract}
 
 \addcontentsline{toc}{chapter}{Indledning}
