--- a/latex/main.tex
+++ b/latex/main.tex
@@ -924,7 +924,7 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
-Vores valg af opslagssteder i det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er førhen blevet påvist, at folk der spiller computer vil have være hurtigere\cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
+Vores valg af opslagssteder i det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere\cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
 
 Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskelle på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket vil give dem et dårligere resultat.
 
