--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,6 +6,8 @@ Human motion models for pointing tasks are used in the design of many everyday i
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
+Inden for menneske-datamaskine interaktion er Fitt's Lov meget udbredt som optimerings- og forbedringsværktøj ved design af brugerflader. Som noteret i \cite{karafillis2012}, så kan Fitts' Lov bruges som en rettesnor når man designer brugergrænseflader - dette kunne f.eks. være til at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til "prime pixels", som er de pixels der ligger i kanterne af skærmen, og ved markørens nuværende position. Disse pixels vil altid være hurtige og nemme for en person at tilgå med sin markør, enten ved at kaste markøren ud mod kanten, eller også ved at højreklikke uden at flytte sin markør. Den nemme tilgængelighed af disse pixels gør at de ofte bliver integreret som centrale dele af brugerfladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen pga. den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugerflader hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}.\\
+
 Indenfor de seneste 10 år har datalogien oplevet en stor udvikling, med introduktionen og udbredelsen af smartphones, tablets og embedded systems. Dette har gjort folks hverdag meget mere afhængig af interaktion med teknologien, hvilket har ført til en enorm udvikling i udformningen af brugergrænseflader og deres funktionalitet. På trods af denne udvikling, så baserer nogle af idéerne bag teknologien sig stadig på intuitive matematiske modeller for det menneskelige motoriske system. En af disse modeller beskriver tiden det tager én person at udføre en motorisk opgave ud fra opgavens sværhedsgrad, og blev første gang beskrevet af Paul M. Fitts i \cite{fitts1954}. Fitts baserede sin analyse på tre eksperimenter, hvor 16 personer blev bedt om at udføre forskellige motoriske øvelser. Fitts fandt frem til en formel, hvor tiden det tager at pege på et mål, er afhængig af hvor stor en sværhedsgrad eller \textit{Index of Difficulty}, en given opgave har.\\
 
 Siden udgivelsen af Fitts' artikel har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle teoretiske ændringer til Fitts' Lov, ud fra sine observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne ud fra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktionsforskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, som baserede sig på et $ID$ som indeholdte kvadratrod i stedet for den allerede kendte variant med logaritme. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle simple forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen at den nye variant passede bedre til den indsamlede data.\\
@@ -13,8 +15,6 @@ Siden udgivelsen af Fitts' artikel har flere andre udgivelser foreslået ændrin
 I 1992 udgav Scott MacKenzie \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant er opbygget omkring Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved lavere sværhedsgrader.\\
 
 Der har i løbet af de seneste to år været en stigende interesse for Fitts' Lov, da flere forskere er begyndt at se på om den også kan bruges ved touch-skærme eller øje bevægelse \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitts' Lov på, så er der stadig et stort behov for at dokumentere, at Fitts' Lov, eller en af varianterne, rent faktisk passer til brugergrænsefladeinteraktion. Denne rapports mål er at indsamle og analysere data for bevægelser med mus eller touchpad. Vi vil genskabe tidligere udførte forsøg af \cite{accot1997} og \cite{goldberg2015}. Til udførelsen af forsøgene vil vi både lave et kontrolleret laboratorieeksperiment og et ukontrolleret eksperiment som foregår online. Vi vil analysere den indsamlede data ved brug af de fire allerede kendte formuleringer, men vil også kigge på brugernes bevægelsesbaner, fart- og hastighedsprofiler. Dette er interessante områder, da der ikke er lavet nogle større afrapporteringer herom, hvilket også er noteret af \cite{goldberg2015}.\\
-
-Fitts' Lov har stor udbredelse indenfor menneske-datamaskine interaktion og bruges mest til at forbedre brugergrænseflader. Som \cite{karafillis2012} noterer, så kan Fitts' Lov bruges som en rettesnor, når man designer brugergrænseflader. Dette kunne f.eks. være til at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til ``prime pixels'', som er kanterne af skærmen og markørens nuværende position. Disse pixels har et meget lavt $ID$ og kan indkorporeres som centrale dele af design. Eksempler på dette er Windows' højreklik funktionalitet og `Start'-knap. Fitts' Lov er sågar brugbar, som en modificeret version, i drop-down menuer, som beskrevet af \cite{accot1997}.
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
