--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -313,3 +313,14 @@
   year={2013},
   organization={ACM}
 }
+
+@article{burnham2004,
+  title={Multimodel inference understanding AIC and BIC in model selection},
+  author={Burnham, Kenneth P and Anderson, David R},
+  journal={Sociological methods \& research},
+  volume={33},
+  number={2},
+  pages={261--304},
+  year={2004},
+  publisher={Sage Publications}
+}
