--- a/latex/main.tex
+++ b/latex/main.tex
@@ -599,12 +599,11 @@ Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangs
 \subsection*{AIC-analyse}
 AIC anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige at AIC ikke kan sige noget om kvaliteten af en model I absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af hver model.
 
-Tabel \ref{tab:table_analysis_aic1} viser AIC-værdierne, og den relative forskel i mellem dem, for de fire modeller. Eftersom den absolute AIC-værdi ikke I sig selv siger noget, kigger vi kun på forskellen mellem dem.
+Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for alle pegeopgaver, og den relative forskel i mellem dem, for de fire modeller. Eftersom den absolute AIC-værdi ikke I sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, mens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.
 
-Det ses af tabel \ref{tab:table_analysis_aic1} at vi bruger modellen med den laveste værdi, altså Meyer's, som nulpunkt. Det ses deraf at forskellen mellem de tre modeller med den laveste AIC-værdi (Meyer, MacKenzie, Fitts) ikke er betydelig, I forhold til forskellen mellem disse og Welford's model.
+Når man ser på AIC-værdier, så er det den relative forskel i mellem værdierne for hver model som er vigtig. Vi kan bruge $\Delta_i$, som beskrivelse af forskellen mellem en models AIC-værdier og den mindste AIC-værdi, $\Delta_i = AIC_i - AIC_{min}$\cite{burnham2004}. $\Delta$-værdierne vil derved være den information vi vil midste, ved at bruge en model fremfor en anden\cite{burnham2004}. Modeller med $\Delta_i \leq 2$ vi ikke kunne skælnes mellem, mens modeller med $\Delta_i > 10$ kan siges at være dårligere. Modeller med $4 \leq \Delta_i \leq 7$ kan ikke udelades, men kan heller ikke erstatte minimumsmodellen fuldt\cite{burnham2004}.
 
-Det vi kan uddrage af denne analyse, er at vi har med nogle meget ensartede modeller at gøre, I forhold til hvordan de passer på dataen, dog med undtagelse af Welford's model.
-
+Forskellene i tabel \ref{tab:table_analysis_aic1} er alle over 10 og vi kan derfor sige at Meyer's formulering beskriver den indsamlede data bedst. Forskellene for de 10 tilfældigt udvalgte personer, som ses i tabel \ref{tab_table_analysis_aic3}, ligger generelt lavere end forskellene i tabel \ref{tab_table_analysis_aic1}. På de fleste af personerne er har Meyer's, MacKenzie's og Fitts' en forskel som er mindre end eller lig med 2, hvilket gør at de beskriver den indsamlede data lige godt. Forskellene for Welford's formulering er generelt højere, dog kun få over 10, hvilket gør at vi ikke kan udelukke den som værende mere beskrivende for vores data, men at den ikke beskriver vores data så præcist som de tre andre. 
 \begin{table}[h]
 \centering
 \begin{tabular}{lll}
@@ -614,8 +613,46 @@ Mackenzie & 92763.02 & 34.64 \\
 Fitts 	  & 92804.17 & 75.79 \\
 Welford   & 94510.34 & 1781.96
 \end{tabular}
-\caption{AIC værdier og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
+\caption{AIC værdier for alle personers pegeopgaver og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
 \label{tab:table_analysis_aic1}
+\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{lllll}
+Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
+107    & 353.94 & 355.67    & 356.61 & 357.17  \\
+108    & 338.06 & 339.06    & 339.56 & 351.69  \\
+56     & 357.82 & 358.15    & 358.42 & 359.68  \\
+246    & 357.16 & 357.35    & 357.56 & 366.10  \\
+68     & 343.20 & 344.42    & 344.86 & 352.58  \\
+140    & 325.15 & 325.07    & 325.12 & 350.23  \\
+25     & 330.44 & 333.60    & 334.84 & 335.92  \\
+164    & 349.84 & 351.44    & 352.02 & 354.79  \\
+255    & 355.91 & 356.39    & 356.76 & 355.85  \\
+59     & 360.84 & 360.66    & 360.79 & 365.70
+\end{tabular}
+\caption{AIC værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer}
+\label{tab:table_analysis_aic2}
+\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{lllll}
+Person & Meyer  & MacKenzie & Fitts  & Welford \\\hline
+107    & 0      & 1.72      & 2.67   & 3.23    \\
+108    & 0      & 1.00      & 1.50   & 13.63   \\
+56     & 0      & 0.33      & 0.60   & 1.86    \\
+246    & 0      & 0.19      & 0.40   & 8,94    \\
+68     & 0      & 1.22      & 1.66   & 9.38    \\
+140    & 0.08   & 0         & 0.05   & 25.16   \\
+25     & 0      & 3.16      & 4.40   & 5.48    \\
+164    & 0      & 1.60      & 2.18   & 4.95    \\
+255    & 0.06   & 0.54      & 0.91   & 0       \\
+59     & 0.18   & 0         & 0.13   & 5.04
+\end{tabular}
+\caption{Indbyrdes forskel mellem AIC-værdierne for 10 tilfældigt udvalgte personer. Forskellen er udregnet med udgangspunkt i den model med lavest AIC-værdi.}
+\label{tab:table_analysis_aic2}
 \end{table}
 
 \addcontentsline{toc}{subsection}{Residualanalyse}
@@ -650,7 +687,7 @@ Det ses af figur \ref{fig:plot_residual_welford} at Welford's især er dårliger
 
 \addcontentsline{toc}{section}{Modelanalyse af navigationsopgaver}
 \section*{Modelanalyse af navigationsopgaver}
-I vores forsøg havde vi, udover pegeopgaven, også tunnel- og spiralopgaver. Vi vil i dette afsnit forsøge at tilpasse de fire formuleringer af Fitts lov på vores navigationsopgaver, velvidende om, at det ikke er en type opgaver de er beregnet til. Accot og Zhai har i deres artikel \cite{accot1997} undersøgt lignende navigationsopgaver og fundet et $ID$ specifikt for både tunnel- og spiralopgaver, hvilket vi vil bruge til at sammenligne med de fire formuleringer.
+I vores forsøg havde vi, udover pegeopgaven, også tunnel- og spiralopgaver. Vi vil i dette afsnit forsøge at tilpasse de fire formuleringer af Fitts lov på vores navigationsopgaver, velvidende om, at det ikke er en type opgaver de er beregnet til. Accot og Zhai har undersøgt lignende navigationsopgaver og fundet et $ID$ specifikt for både tunnel- og spiralopgaver, hvilket vi vil bruge til at sammenligne med de fire formuleringer\cite{accot1997}.
 
 \addcontentsline{toc}{subsection}{Analyse af tunnelopgaver}
 \subsection*{Analyse af tunnelopgaver}
