--- a/latex/main.tex
+++ b/latex/main.tex
@@ -597,13 +597,17 @@ Det er de fire matematiske modeller som vores pegeopgaveanalyse vil tage udgangs
 
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
-AIC anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige at AIC ikke kan sige noget om kvaliteten af en model I absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af hver model.
+AIC anslår kvaliteten af hver model, relativt til hver af de andre modeller. Hvilket vil sige at AIC ikke kan sige noget om kvaliteten af en model I absolut forstand, og derfor ikke kan vurdere hvor godt en model passer på dataen - kun den relative kvalitet af hver model.\\\\
 
-Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for alle pegeopgaver, og den relative forskel i mellem dem, for de fire modeller. Eftersom den absolute AIC-værdi ikke I sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, mens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.
+Tabel \ref{tab:table_analysis_aic1} viser AIC-værdier for alle pegeopgaver, og den relative forskel i mellem dem, for de fire modeller. Eftersom den absolute AIC-værdi ikke I sig selv siger noget, kigger vi kun på forskellen mellem dem. Tabel \ref{tab:table_analysis_aic2} viser AIC-værdier for alle pegeopgaver for 10 tilfældigt udvalgte personer, mens tabel \ref{tab:table_analysis_aic3} viser den relative forskel i mellem de fire modellers AIC-værdier for de samme personer.\\
 
-Når man ser på AIC-værdier, så er det den relative forskel i mellem værdierne for hver model som er vigtig. Vi kan bruge $\Delta_i$, som beskrivelse af forskellen mellem en models AIC-værdier og den mindste AIC-værdi, $\Delta_i = AIC_i - AIC_{min}$\cite{burnham2004}. $\Delta$-værdierne vil derved være den information vi vil midste, ved at bruge en model fremfor en anden\cite{burnham2004}. Modeller med $\Delta_i \leq 2$ vi ikke kunne skælnes mellem, mens modeller med $\Delta_i > 10$ kan siges at være dårligere. Modeller med $4 \leq \Delta_i \leq 7$ kan ikke udelades, men kan heller ikke erstatte minimumsmodellen fuldt\cite{burnham2004}.
+Når man ser på AIC-værdier, så er det den relative forskel i mellem værdierne for hver model som er vigtig. Vi kan bruge $\Delta_i$, som beskrivelse af forskellen mellem en models AIC-værdier og den mindste AIC-værdi,
+\begin{align} 
+\Delta_i = AIC_i - AIC_{min}
+\end{align}
+$\Delta$-værdierne vil derved være den information vi vil midste, ved at bruge en model fremfor en anden\cite{burnham2004}. Modeller med $\Delta_i \leq 2$ vi ikke kunne skælnes mellem, mens modeller med $\Delta_i > 10$ kan siges at være dårligere. Modeller med $4 \leq \Delta_i \leq 7$ kan ikke udelades, men kan heller ikke erstatte minimumsmodellen fuldt\cite{burnham2004}.\\
 
-Forskellene i tabel \ref{tab:table_analysis_aic1} er alle over 10 og vi kan derfor sige at Meyer's formulering beskriver den indsamlede data bedst. Forskellene for de 10 tilfældigt udvalgte personer, som ses i tabel \ref{tab_table_analysis_aic3}, ligger generelt lavere end forskellene i tabel \ref{tab_table_analysis_aic1}. På de fleste af personerne er har Meyer's, MacKenzie's og Fitts' en forskel som er mindre end eller lig med 2, hvilket gør at de beskriver den indsamlede data lige godt. Forskellene for Welford's formulering er generelt højere, dog kun få over 10, hvilket gør at vi ikke kan udelukke den som værende mere beskrivende for vores data, men at den ikke beskriver vores data så præcist som de tre andre. 
+Forskellene i tabel \ref{tab:table_analysis_aic1} er alle over 10 og vi kan derfor sige at Meyer's formulering beskriver den indsamlede data bedst. Forskellene for de 10 tilfældigt udvalgte personer, som ses i tabel \ref{tab:table_analysis_aic3}, ligger generelt lavere end forskellene i tabel \ref{tab:table_analysis_aic1}. På de fleste af personerne er har Meyer's, MacKenzie's og Fitts' en forskel som er mindre end eller lig med 2, hvilket gør at de beskriver den indsamlede data lige godt. Forskellene for Welford's formulering er generelt højere, dog kun få over 10, hvilket gør at vi ikke kan udelukke den som værende mere beskrivende for vores data, men at den ikke beskriver vores data så præcist som de tre andre. 
 \begin{table}[h]
 \centering
 \begin{tabular}{lll}
